Display correct user

--- a/files/object-server.conf
+++ b/files/object-server.conf
@@ -4,7 +4,7 @@ mount_check = false
 disable_fallocate = true
 bind_port = 6010
 workers = 1
-user = authotswift
+user = authotreplication
 log_facility = LOG_LOCAL2
 recon_cache_path = /var/cache/swift
 eventlet_debug = true
