--- a/files/object-expirer.conf
+++ b/files/object-expirer.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 # swift_dir = /etc/swift
-user = authotswift
+user = authotreplication
 # You can specify default log routing here if you want:
 log_name = object-expirer
 log_facility = LOG_LOCAL6
