--- a/files/proxy-server.conf
+++ b/files/proxy-server.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 bind_port = 8080
 workers = 1
-user = authotswift
+user = authotreplication
 log_facility = LOG_LOCAL1
 eventlet_debug = true
 
