--- a/files/rsyncd.conf
+++ b/files/rsyncd.conf
@@ -1,5 +1,5 @@
-uid = authotswift
-gid = authotswift
+uid = authotreplication
+gid = authotreplication
 log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
 address = 127.0.0.1
