--- a/files/proxy-server.conf
+++ b/files/proxy-server.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 bind_port = 8080
 workers = 1
-user = authotreplication
+user = authotreplication	
 log_facility = LOG_LOCAL1
 eventlet_debug = true
 
@@ -39,10 +39,7 @@ use = egg:swift#tempurl
 
 [filter:tempauth]
 use = egg:swift#tempauth
-user_admin_admin = admin .admin .reseller_admin
-user_test_tester = testing .admin
-user_test2_tester2 = testing2 .admin
-user_test_tester3 = testing3
+user_replication_authot = authot .admin
 
 [filter:staticweb]
 use = egg:swift#staticweb
